# lru

./: .gitignore  Makefile  README.md  draw.py  learn.py  log.py  lru  lru-cli  lru-wm  lru.py  lru_cli.py  menu.py  pyproject.toml  pytest.ini  requirements-test.txt  robot.py  settings.py
common/: utils.py
files/adverbs/: adverbs.json
files/alphabet/: alphabet.json
files/animals/: animals.json
files/body/: body.json
files/clothes/: clothes.json
files/colors/: colors.json
files/expressions/: greetings.json  questions.json
files/family/: general.json  misc.json
files/food/: drinks.json  fruits.json  meat.json  misc.json  vegetables.json
files/house/: general.json  kitchen.json
files/numbers/: numbers.json
files/pronouns/personal/: accusative.json  dative.json  genitive.json  instrumental.json  nominative.json  prepositional.json
files/pronouns/possessive/: accusative.txt  dative.txt  genitive.txt  instrumental.txt  nominative.txt  prepositional.txt
files/time/: hours.json  misc.json  months.json  season.json  week.json
files/verbs/: common_100.json
files/verbs/present/: all.json  аблактировать.json  абсолютизировать.json  абсорбировать.json  абсорбироваться.json  абстрагировать.json  авансировать.json  автоматизировать.json  авторизовывать.json  агитировать.json  агонизировать.json  агукать.json  адаптировать.json  адаптироваться.json  акать.json  (+4776 more)
files/weather/: weather.json
files/words/: all.json  common_100.json
tests/: test_draw.py  test_learn.py  test_log.py  test_lru.py  test_lru_cli.py  test_robot.py
tests/common/: test_utils.py
